# Beamfomer-on-GPUs

./: CMakeLists.txt  README.md  package.dox
CNProc/: CMakeLists.txt  package.dox
CNProc/src/: AsyncCommunication.cc  AsyncCommunication.h  AsyncTranspose.cc  AsyncTranspose.h  AsyncTransposeBeams.cc  AsyncTransposeBeams.h  BandPass.cc  BandPass.h  BeamFormer.cc  BeamFormer.h  BeamFormerAsm.S  BeamFormerAsm.h  BeamFormerAsm3St6Bm.inc  BeamFormerAsm6St3Bm.inc  CMakeLists.txt  CN_Math.h  CN_Processing.cc  CN_Processing.h  CN_Processing_main.cc  ContainsOnlyZerosAsm.S  ContainsOnlyZerosAsm.h  Correlator.cc  Correlator.h  CorrelatorAsm.S  CorrelatorAsm.h  Dedispersion.cc  Dedispersion.h  DedispersionAsm.S  DedispersionAsm.h  FCNP_ClientStream.cc  FCNP_ClientStream.h  FFT_Asm.S  FFT_Asm.h  FIR.cc  FIR.h  FIR_Asm.S  FIR_Asm.h  FIR_InvertedStationPPFWeights.h  FIR_OriginalCepPPFWeights.h  FIR_OriginalStationPPFWeights.h  (+23 more)
CNProc/test/: CMakeLists.txt  FlaggerTest-1subband.parset  FlaggerTest.parset  RFI-test.parset  filterTestResult.ps  inversePPFTestResult.ps  run-FlaggerTest  run-RFI-test  tBeamForming.cc  tCN_Processing.cc  tCN_Processing.sh  tCN_Processing_alloc.cc  tCN_Processing_alloc.parset  tCN_Processing_alloc.sh  tDedispersion.cc  tFIR_Asm.cc  tInversePPF.cc  tPencilBeamFormer.cc  tPencilBeamFormer.sh  tStokes.cc  tStokes.sh  tStokesAsm.cc  test.parset
Cobalt/CoInterface/: CMakeLists.txt  package.dox
Cobalt/CoInterface/src/: Align.h  Allocator.cc  Allocator.h  BeamCoordinates.cc  BeamCoordinates.h  BeamFormedData.h  BestEffortQueue.h  BestEffortQueue.tcc  BlockID.cc  BlockID.h  CMakeLists.txt  Config.h  CorrelatedData.h  DataFactory.cc  DataFactory.h  Exceptions.h  FinalMetaData.cc  FinalMetaData.h  InverseFilteredData.h  MultiDimArray.h  OutputTypes.h  Parset.cc  Parset.h  Poll.h  Pool.h  PrintVector.h  SetOperations.h  SlidingPointer.h  SmartPtr.h  SparseSet.h  Stream.cc  Stream.h  StreamableData.h  SubbandMetaData.h  TABTranspose.cc  TABTranspose.h  TriggerData.h
Cobalt/CoInterface/test/: CMakeLists.txt  tBestEffortQueue.cc  tCorrelatedData.cc  tMultiDimArray.cc  tParset.cc  tParset.parset_obs99275  tParset.sh  tSparseSet.cc  tTABTranspose.cc
Cobalt/GPUProc/: CMakeLists.txt  links_gcrypt.sh  package.dox
Cobalt/GPUProc/doc/: 2ndtranspose.txt  BGP-Cobalt-procs.dia  CircularBufferCobaltInputProc.dia  Cobalt-hardware.dia  DAS4-fs5-jenkins-install-instructions.txt  bf-2nd-transpose.dia  bf-pipeline.txt  opencl-cuda-types.txt  rtcp-usage.txt  scripts.txt
Cobalt/GPUProc/etc/: CMakeLists.txt  default.parset
Cobalt/GPUProc/src/: BandPass.cc  BandPass.h  CMakeLists.txt  FilterBank.cc  FilterBank.h  KernelFactory.h  MultiDimArrayHostBuffer.h  OpenMP_Lock.h  PerformanceCounter.h  RunningStatistics.cc  RunningStatistics.h  cpu_utils.cc  cpu_utils.h  global_defines.cc  global_defines.h  gpu_incl.h  gpu_utils.h  gpu_wrapper.h  rtcp.cc  rtcp.log_prop
Cobalt/GPUProc/test/: CMakeLists.txt  MockOnlineControl.sh  TestUtil.h  cmpfloat.cc  cmpfloat.py  fpequals.h  tBeamform_1sec_1st_5sb_noflagging.parset  tBeamform_incoherent_2sec_1st_5sb_noflagging.parset  tCorrelate_3sec_1st_5sb.parset  (+25 more)
Cobalt/InputProc/: CMakeLists.txt  package.dox
Cobalt/OutputProc/: CMakeLists.txt  package.dox
IONProc/: CMakeLists.txt
IONProc/src/: BeamletBuffer.cc  BeamletBuffer.h  BeamletBufferToComputeNode.cc  BeamletBufferToComputeNode.h  CMakeLists.txt  CommandServer.cc  CommandServer.h  ControlPhase3Cores.cc  ControlPhase3Cores.h  Delays.cc  Delays.h  FCNP_ServerStream.cc  FCNP_ServerStream.h  GlobalVars.cc  GlobalVars.h  IONProc.log_prop  IONProc.supp  ION_Allocator.cc  ION_Allocator.h  ION_main.cc  InputSection.cc  InputSection.h  InputThread.cc  InputThread.h  InputThreadAsm.S  InputThreadAsm.h  Job.cc  Job.h  JobQueue.cc  JobQueue.h  LockedRanges.h  LogThread.cc  LogThread.h  OutputSection.cc  OutputSection.h  OutputThread.cc  OutputThread.h  RSP.h  ReaderWriterSynchronization.cc  ReaderWriterSynchronization.h  (+13 more)
IONProc/test/: CMakeLists.txt  RTCP.parset  tDelayCompensation.cc  tDelayCompensation.parset  tDelayCompensation.sh  tRSP.cc  tRSP.in_16bit  tRSP.stdout  tSSH.cc  tSSH.sh  tSSH.stdout
Interface/: CMakeLists.txt  package.dox
Interface/src/: Allocator.cc  BGPAsm.S  BeamCoordinates.cc  CMakeLists.txt  CN_Mapping.cc  DataFactory.cc  FinalMetaData.cc  Parset.cc  RSPTimeStamp.cc  Stream.cc
Interface/test/: CMakeLists.txt  tCorrelatedData.cc  tMultiDimArray.cc  tRSPTimeStamp.cc  tSparseSet.cc
MetaDataGatherer/: CMakeLists.txt
MetaDataGatherer/src/: CMakeLists.txt  FinalMetaDataGatherer.cc  FinalMetaDataGatherer.log_prop  failedtilesinfo.cc
MetaDataGatherer/test/: CMakeLists.txt  debugbeaminfo.py  failedtilesinfo.parset  tfailedtilesinfo.run  tfailedtilesinfo.sh  tfailedtilesinfo.stdout
RTCPTools/src/: CMakeLists.txt  cexec-udp-copy  generator.c  tbb-crc-test.cc  tbb-dumpframes.cc  udp-copy.c
Run/src/: BGPPartition.sh  BlueGeneCheck.sh  BlueGeneControl.conf  CEPlogProcessorSettings.cc  CMakeLists.txt  CNProcessing.sh  IONProcessing.sh  LogArchiver.sh  OLAP.parset  RTCP.parset  casarc  commandOLAP.py  controller.sh  generate_OLAP.parset.pl  gracefullyStopBGProcessing.sh  locations.sh.in  multitail-olap.conf  routeToCobalt  startBGL.sh  stopBGL.sh  watchlogs.sh
Storage/: CMakeLists.txt  package.dox
Storage/scripts/: ReadObservation.m
Storage/src/: CMakeLists.txt  ExitOnClosedStdin.cc  FastFileStream.cc  Format.cc  InputThread.cc  MSWriter.cc  MSWriterCorrelated.cc  MSWriterDAL.cc  MSWriterFile.cc  MSWriterNull.cc  MeasurementSetFormat.cc  OutputThread.cc  Storage_main.cc  SubbandWriter.cc  TBB_StaticMapping.cc  TBB_Writer.cc  TBB_Writer_main.cc  createHeaders.cc  gnuplotMS.sh  plotMS.cc
Storage/test/: CMakeLists.txt  RTCP.parset  tAH_TestStorage.cc  tDAL.cc  tFastFileStream.cc  tMSWriterCorrelated.cc  tMSWriterCorrelated.parset  tMSWriterCorrelated.run  tMSWriterDAL.cc  tMSWriterDAL.parset  tMeasurementSetFormat.cc  tMeasurementSetFormat.parset-j2000  tMeasurementSetFormat.parset-sun  tMeasurementSetFormat.sh  tTBB_StaticMapping.cc  tTBB_Writer-verify.py  tTBB_Writer.sh
(+701 files in other folders)
